--- a/src/app/components/header-main/header-main.component.html
+++ b/src/app/components/header-main/header-main.component.html
@@ -34,8 +34,7 @@
     <div style="position: fixed;top:8px;right:0;">
         <div class="links-first" style="display: inline-block;">
             <a href="https://modelbox-ai.com/modelbox-book/" target="_blank">
-                <img src={{helpSvg}} />
-                <span style="margin-bottom: 10px;">&nbsp;&nbsp;{{helpText}}</span>
+                <span class="help" style="margin-bottom: 10px;">{{helpText}}</span>
             </a>
         </div>
         <!-- <div class="links-first" style="display: inline-block;vertical-align: middle;">
