--- a/src/app/components/header-main/header-main.component.less
+++ b/src/app/components/header-main/header-main.component.less
@@ -25,6 +25,11 @@
     }
   }
 
+  .help::before {
+    content      : '❔';
+    color        : #ffffff;
+  }
+
   a {
     line-height    : 40px;
     color          : #ADB0B8;
