--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -93,7 +93,7 @@
     }
 
     .tool-bar-mid {
-        float: right;
+        float      : right;
         margin-left: 100px;
     }
 
@@ -112,5 +112,17 @@
 
     .devui-dropdown-default {
         margin-left: 4px;
+    }
+}
+
+d-card {
+    cursor: pointer;
+    transition:
+        box-shadow 0.3s ease-in-out,
+        transform 0.3s ease-in-out;
+
+    &:hover {
+        box-shadow: 0 4px 16px 0 rgba(17, 18, 19, 0.5);
+        transform : translateY(-5px);
     }
 }
