--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
 <div class="modelArts-header-container links-panel">
   <div class="links">
     <a class="modelArts-header-link links" href="/help/" target="_blank">
-      <img src={{helpSvg}} />{{helpText}}
+      <i class="icon icon-help"></i>{{helpText}}
     </a>
   </div>
   <div class="splitting-line"></div>
