--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -8,7 +8,7 @@
           <as-split-area class="as-split-area-left">
             <app-insert-panels [onClick]="handleInsertPanelsClick" [onNodeShapeClick]="handleNodeShapeClick"
               [onNodeShapeDragStart]="handleNodeShapeDragStart" [onNodeShapeDragEnd]="handleNodeShapeDragEnd"
-              [regFlowUnitPanel]="regFlowUnitPanel"></app-insert-panels>
+              [regFlowUnitPanel]="regFlowUnitPanel" [dirs]="dirs" (refreshEmmiter)="refreshFlowunit($event)"></app-insert-panels>
           </as-split-area>
         </as-split>
       </as-split-area>
@@ -27,14 +27,15 @@
               [showCreateProjectDialog]="showCreateProjectDialog.bind(this)"
               [showOpenProjectButtonDialog]="showOpenProjectButtonDialog.bind(this)"
               [showCreateFlowunitDialog]="showCreateFlowunitDialog.bind(this)" [graphs]="graphs"
-              (graphsEmmiter)="getToolBarGraphsChange($event)" (refreshEmmiter)="refreshFlowunit($event)" 
-              (dotSrcEmmiter)="dotSrcUpdate($event)" (createProjectEmmiter)="createProject($event)"> 
+              (graphsEmmiter)="getToolBarGraphsChange($event)" (refreshEmmiter)="refreshFlowunit($event)"
+              (dotSrcEmmiter)="dotSrcUpdate($event)" (createProjectEmmiter)="createProject($event)"
+              (flowunitEmmiter)="updateDir($event)" (projectPathEmmiter)="updateProjectPath($event)">
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
-              <app-graph [dotSrc]="dotSrc" [hasFocus]="focusedPane === 'Graph'" [onUndo]="handleUndoButtonClick" style="z-index:-100"
-                [onRedo]="handleRedoButtonClick" [onError]="handleError" [onFocus]="handleGraphFocus"
-                [onSelect]="handleGraphComponentSelect" [onTextChange]="handleTextChange"
+              <app-graph [dotSrc]="dotSrc" [hasFocus]="focusedPane === 'Graph'" [onUndo]="handleUndoButtonClick"
+                style="z-index:-100" [onRedo]="handleRedoButtonClick" [onError]="handleError"
+                [onFocus]="handleGraphFocus" [onSelect]="handleGraphComponentSelect" [onTextChange]="handleTextChange"
                 [onInitialized]="handleGraphInitialized" [registerGetSvg]="registerGetSvg"
                 [registerNodeShapeClick]="registerNodeShapeClick"
                 [registerNodeShapeDragStart]="registerNodeShapeDragStart"
